<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">OmniVers</string>
    <string name="hotel_address">410 Atkinson Drive, Honolulu, HI, 96814</string>
    <string name="loading">Loading...</string>
    <string name="saving">Saving...</string>
    <string name="alert_close">Close</string>
    <string name="ok">Ok</string>
    <string name="gotit">Got It</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="or">OR</string>
    <string name="noname"></string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="mk"></string>
    <string name="hack_datetime1">yyyy-MM-dd HH:mm:ss</string>
    <string name="hack_datetime2">yyyy MM dd HH mm ss</string>
    <string name="hack_date">yyyy-MM-dd-HH-mm-ss</string>
    <string name="title_location_permission">We only use your location to help find businesses and events in your area.\nAccepting allow us to more quickly and easily help you find what you’re looking for.</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="image">Image</string>
    <string name="pay_money">Pay Money</string>
    <string name="receive_money">Receive Money</string>
    <string name="see_transactions">See Transactions</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="to_from">To/From</string>
    <string name="receive_from">Receive from</string>
    <string name="pay_to">Pay to</string>
    <string name="transaction_history">Transaction History</string>
    <string name="top_spending">Top Spending</string>
    <string name="budget">Budget</string>
    <string name="used">%Used</string>
    <string name="budget_analysis">Budget Analysis</string>
    <string name="master_your_money">Master Your Money</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="form_username">Username</string>
    <string name="form_password">Password</string>
    <string name="login_btn_text">Sign In</string>
    <string name="register_btn_text">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="get_registered">Get Registered</string>
    <string name="error_invalid_email">Email is invalid</string>
    <string name="error_password_not_match">Password doesn\'t match</string>
    <string name="error_password">Please input password</string>
    <string name="error_invalid_password">Password must be at least 5 character long</string>
    <string name="error_invalid_phone">Please input valid phone</string>
    <string name="error_invalid_userame">Please input user name</string>
    <string name="error_zip_code">Invalid zip code</string>
    <string name="error_network">Network unavailable, please try again later</string>
    <string name="error_invalid_credentials">Failed to Complete Request</string>
    <string name="error_server_response">Server response error</string>
    <string name="error_permission">To use function, needs the permission</string>
    <string name="error_conn_error">Connection err. Please try again after getting connection.</string>
    <string name="error_gen">An error occurred</string>
    <string name="error_invalid_response">Invalid server response</string>
    <string name="network_failure_title">Network Error</string>
    <string name="network_failure">There was an error processing the payment, please check your network connection.</string>
    <string name="emptyList">Transaction History is Empty!</string>
    <string name="emptyFriendList">Empty!</string>
    <string name="budgetEmptyList">Budget History is Empty!</string>
    <string name="payment_title">Send Money</string>
    <string name="payment_subtitle">Enter Amount to Send</string>
    <string name="ch_from_frnds">Choose from your friends</string>
    <string name="ch_from_contacts">Choose from contacts</string>
    <string name="instacashtm">AvailCash</string>
    <string name="send_money">Send AvailCash</string>
    <string name="add_friends">Add Friends from Contacts</string>
    <string name="chose_recepient">Choose Recipient</string>
    <string name="local_store_purchase">Local store purchase</string>
    <string name="work_related">Work Related</string>
    <string name="appointments">Book an Appointment</string>
    <string name="job_connection">Job Connection</string>
    <string name="payroll_services">Payroll Services</string>
    <string name="punch_in">Clock In</string>
    <string name="pay_stubs">Pay Stubs</string>
    <string name="invoicing">Make/Pay Invoicing</string>
    <string name="donations">Donations</string>
    <string name="rtw_agreement">This confirms your availability for work.</string>
    <string name="appointment_settings">Appointment Settings</string>
    <string name="provider_not_found">Your preferred provider is not found in our database. Please call them to set an appointment and add it to our calender.</string>
    <string name="estimated_price">Estimated Price</string>
    <string name="dashboard">Dashboard</string>
    <string name="finf_job_worker">Find a Job/Worker</string>
    <string name="done">Done</string>
    <string name="lets_go_to_work">Lets Get to work</string>
    <string name="submit">Submit</string>
    <string name="round_string">Turn on to round up to the nearest dollar and the rest goes to your InstaSavings</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="insta_cash_balance">AvailCash</string>
    <string name="insta_savings_balance">AvailSavings</string>
    <string name="read_scan">Read/Scan</string>
    <string name="ftf_continue">Continue</string>
    <string name="save">Save</string>
    <string name="share_title">Share</string>
    <string name="share_subject">You both will receive free meal when they install the app.</string>
    <string name="share_body">Check out the YEStaurants! app. It really good!\n https://play.google.com/store/apps/details?id=eAppBuilder1957.d</string>
    <string-array name="time_entries">
        <item>9 AM</item>
        <item>10 AM</item>
        <item>11 AM</item>
        <item>12 AM</item>
        <item> 1 PM</item>
        <item> 2 PM</item>
        <item> 3 PM</item>
        <item> 4 PM</item>
        <item> 5 PM</item>
        <item> 6 PM</item>
        <item> 7 PM</item>
        <item> 8 PM</item>
        <item> 9 PM</item>
    </string-array>
    <string name="dashboard_mymoney">My\nMoney</string>
    <string name="dashboard_activity">Activity</string>
    <string name="dashboard_mycalendar">Calendar</string>
    <string name="dashboard_connect">Connect</string>
    <string name="dashboard_profilecheck">Profile</string>
    <string-array name="cookingtemp">
        <item>Rare</item>
        <item>Medium Rare</item>
        <item>Medium</item>
        <item>Medium Well</item>
        <item>Well</item>
    </string-array>
    <string name="menu_total_price">Total Items: %d \nCart Sub-Total: $%.2f</string>
    <string name="progress_message">Fetching Token for given Card Data...</string>
    <string name="progress_title">Please Wait</string>
    <string name="token">"Token"</string>
    <string name="transaction_info">Transaction Information</string>
    <string name="error">Error</string>
    <string name="code">"Code: "</string>
    <string name="message">"Message: "</string>
    <string name="extra_message">"Extra Message: "</string>
    <string name="data_descriptor">"Data Descriptor :  "</string>
    <string name="data_value">"Data Value:  "</string>
    <string name="invalid_card_number">Invalid Card Number</string>
    <string name="invalid_month">Invalid Month</string>
    <string name="two_digit_month">Two Digit Month Required</string>
    <string name="invalid_year">Invalid Year</string>
    <string name="invalid_cvv">Invalid CVV</string>
    <string name="invalid_zipcode">Invalid Zipcode</string>
    <string name="invalid_nickname">Invalid Nickname</string>
    <string name="request_permission_hint">Please allow permissions to use function</string>
    <string name="error_dsa">Error starting DocumentScannerActivity!</string>
    <string name="default_notification_channel_id">HawaiiAppsAll</string>
    <string name="success_make_order">Successfully Sent Your Service Request</string>
    <string name="msg_order_cancelled_order">Order has been canceled.</string>
    <string name="msg_nsf_cancelled_order">NSF and order has been canceled.</string>
    <string name="msg_driver_on_location">Driver on Location</string>
    <string name="msg_order_refused">This order has been: Refused.</string>
    <string-array name="card_mm">
        <item>MM</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="card_yy">
        <item>YY</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
    </string-array>
    <string name="address">1455 Market Street  San Francisco, CA, 94103</string>
    <string name="pay_button">Pay 🍪</string>
    <string name="lauren_nobel">Lauren Nobel</string>
    <string name="merchant_id_not_set_message"><![CDATA[To request a Google Pay nonce, replace <b>ConfigHelper.GOOGLE_PAY_MERCHANT_ID</b> with your Google Pay Merchant ID.]]></string>
    <string name="merchant_id_not_set_title">Missing Google Pay Merchant ID</string>
    <string name="desc_about_zinta">MENT has technology built in to make your life easier and safer. One of those services is MahaloPay.\nMahaloPay is a service that transfers funds instantly, available in multiple apps and is provided by National Funding Group, LLC.</string>
    <string name="desc_about_zinta1">Never go through the signup process again.\n1 Username\n1 Password\n1 PIN</string>
    <string name="desc_about_zinta2">Use the same login with all these apps:\n1. Yestaurants\n2. UPX Delivery Now\n</string>
    <string name="title_checkout">CHECKOUT</string>
    <string name="title_available_options">Available Options</string>
    <string name="title_eat_in_after">Eat In After :</string>
    <string name="title_table_reserv">Table Reservation</string>
    <string name="title_ontable">Food On Table</string>
    <string name="title_pickup_after">Pick-up After :</string>
    <string name="title_curbside_pickup_after">Curbside Pickup After :</string>
    <string name="title_delivery_around">Delivery Around :</string>
    <string name="title_delivery_around_sport">Delivery at an Event(Sports...)</string>
    <string name="title_catering_at">Catering At :</string>
    <string name="title_party_at">Party Room At :</string>
    <string name="title_submit_order">Submit Order</string>
    <string name="title_pay_with_zinta">Pay with Mahalo Pay™(Current Balance: $0.00)</string>
    <string name="title_pay_with_loyalty">Pay with Rewards(Balance: $0.00)</string>
    <string name="title_pay_with_gift">Pay with Gift Card (Balance: $0.00)</string>
    <string name="title_pay_with_bogo">Pay with BOGO (Available: 0)</string>
    <string name="title_pay_with_tab">Pay with Tab#</string>
    <string name="title_join_existing_order">Join Existing Order:</string>
</resources>